# argus

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  action.yml  argus.spec  docker-entrypoint.sh  install.sh  json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
argus/: __init__.py  cli.py  web_server.py
argus/agents/: __init__.py  advanced_ctf_agent.py  ai_port_scanner.py  android_apk_agent.py  api_pentest_agent.py  authentication_agent.py  autonomous_agent.py  base_agent.py  clickjacking_agent.py  command_injection_agent.py  cors_agent.py  ctf_agent.py  cve_exploiter_agent.py  exploit_chain_agent.py  exploitation_agent.py  gating.py  host_header_injection_agent.py  idor_agent.py  iot_agent.py  jwt_attack_agent.py  ldap_injection_agent.py  llm_client.py  llm_security_agent.py  medusa_agent.py  nosql_injection_agent.py  nuclei_agent.py  open_redirect_agent.py  orchestrator.py  pentest_blackbox_agent.py  pentest_whitebox_agent.py  pipeline_orchestrator_agent.py  plan_agent.py  planner_agent.py  poc_validator_agent.py  prototype_pollution_agent.py  (+19 more)
auth-profiles/: example.yaml
benchmarks/: README.md  run_all.py
docker/: ctf-sandbox.Dockerfile
playbooks/: bug-bounty.yaml
scripts/: check_memory_health.py  ci-scan.sh  docker-build.sh  generate_claudskills.py  init_memory_system.py  install.sh
skills/: nestjs-security.md
tests/: test_adaptive_enum.py  test_agent_graph.py  test_anomaly_detector.py  test_attack_graph.py  test_auth_session.py  test_campaign.py  test_categorized_methodology.py  test_chain_matrix.py  test_cli_gating_mode.py  test_cli_reports.py  test_cloud_cicd_pentest.py  test_context_compression.py  test_core_init.py  test_distributed.py  test_event_bus.py  test_exploitation_agent.py  test_fuzzer.py  test_gating_evaluator.py  test_graph_memory.py  test_integration_e2e.py  test_learning_engine.py  test_llm_security_agent.py  test_memory_system.py  test_monitor.py  test_notifier.py  test_orchestrator_gating_phase3.py  test_osint_agents.py  test_planner_agent.py  test_plugin_loader.py  test_poc_validator.py  test_rate_limiter.py  test_remediation_json_extraction.py  test_repl.py  test_rest_api.py  test_strix_cockpit.py  test_tool_output_parser.py  test_tool_system.py  test_vulndb.py  test_ws_api.py
web-dashboard/: index.html
(+3799 files in other folders)
